--- a/home.html
+++ b/home.html
@@ -266,7 +266,7 @@
                         <h3 class="title"><a href="#">Nike Air Sneakers</a></h3>
                         <h6 class="esteem">#esteem</h6>
                         <div class="price">
-                            <span>&#8358;11000</span>
+                            <span>&#8358;18500</span>
                         </div>
                     </div>
                 </div> <!-- /.item -->
@@ -279,7 +279,7 @@
                         <h3 class="title"><a href="#">Gucci Men Hybrid</a></h3>
                         <h6 class="dignity">#dignity</h6>
                         <div class="price">
-                             <span>&#8358;9000</span>
+                             <span>&#8358;40000</span>
                         </div>
                     </div>
                 </div> <!-- /.item -->
@@ -305,7 +305,7 @@
                         <h3 class="title"><a href="#">Louis Vuitton Classic</a></h3>
                         <h6 class="dignity">#dignity</h6>
                         <div class="price">
-                            <del>&#8358;13500</del> — <span>&#8358;11500</span>
+                            <span>&#8358;40000</span>
                         </div>
                     </div>
                 </div> <!-- /.item -->
@@ -325,7 +325,7 @@
 
                 <div class="item">
                     <div class="product-item">
-                        <a href="viewLVsandalsSHOEdetails.html" class="product-img">
+                        <a href="viewAdidasSHOEdetails.html" class="product-img">
                             <img src="./assets/beauty232.jpg" alt="Image" class="img-fluid" data-pagespeed-url-hash="786734777" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                         </a>
                         <h3 class="title"><a href="#">Louis Vuitton Sandals</a></h3>
