--- a/women.html
+++ b/women.html
@@ -210,14 +210,14 @@
                         <div class="col-6 col-sm-6 col-md-6 mb-4 col-lg-4">
 
                             <div class="product-item">
-                                <a href="viewtedbakerSHOEdetails.html" class="product-img">
+                                <a href="viewMCQUEENSHOEdetails.html" class="product-img">
                                     <span class="custom-badge new">Sale</span>
                                         <img src="./assets/esteemwom229.jpg" alt="Image" class="img-fluid" data-pagespeed-url-hash="197734935" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                     </a>
                                     <h3 class="title"><a href="#">Nike Sneakers</a></h3>
                                     <h6 class="esteem">#esteem</h6>
                                     <div class="price">
-                                        <del>&#8358;13500</del> — <span>&#8358;6000</span>
+                                        <del>&#8358;40000</del> — <span>&#8358;38000</span>
                                     </div>
                             </div>
                         </div>
@@ -225,13 +225,13 @@
                         <div class="col-6 col-sm-6 col-md-6 mb-4 col-lg-4">
 
                             <div class="product-item">
-                                <a href="viewtedbakerSHOEdetails.html" class="product-img">
+                                <a href="viewnikeSHOEdetails.html" class="product-img">
                                     <img src="./assets/esteemwom240.jpg" alt="Image" class="img-fluid" data-pagespeed-url-hash="197734935" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                 </a>
                                     <h3 class="title"><a href="#">Nike Sneakers</a></h3>
                                     <h6 class="esteem">#esteem</h6>
                                     <div class="price">
-                                        <del>&#8358;13500</del> — <span>&#8358;6000</span>
+                                        <del>&#8358;20500</del> — <span>&#8358;18500</span>
                                     </div>
                             </div>
                         </div>
